@@ -1,0 +1,11 @@
+#!/bin/bash
+
+#
+# @file
+#
+# $Id$
+#
+# @author        James H. Hill
+#
+
+grep h /var/emulab/boot/ltmap | wc -l
